# cmake_template

./: CMakeLists.txt  main.cpp  test.cpp
lib/custom_math/: CMakeLists.txt  custom_math.h
src/: custom_math.cpp  custom_math.h
